* Version 0.7.3
  Bugfixes:
  * Check ELF header before accessing kernel vmlinux (fix exception).

  Daemon:
  * Bug #1861876: Random created MAC stored in Registry to have same on
    every start. [HKCU\Software\coLinux]
  * Add build date to exe file properties.
  * View build time of ntkernel driver with --status-driver.

  Kernel:
  * Kernel has been updated to 2.6.22.18
  * Fix for splice local root exploit is included, details on
    http://www.kernel.org/pub/linux/kernel/v2.6/ChangeLog-2.6.22.18
  * Feature Requests #1421120: Fixup "vim fsync" error on cofs.
  * Bugfix get_size for double opened block devices.
  * Fix BSOD on "stty rows N" where n>25. Disable resize. (Paolo Minazzi)

  Installer:
  * Update image ArchLinux-2007.08-2
  * Text '* Notes' sometimes was only shown as '*', adjust field sizes
  * Feature Requests #1898468: expose install folder as variable %COLINUX%

  Buildsystem:
  * New option --errfile use different file for stdout and stderr.

* Version 0.7.2
  Bugfixes:
  * #1324092: cofs rename replace existing file.
  * #1791993: Ship modules with root as owner and group.
  * #1853578: memory usage limit: 0 MB on machines with 4 GB RAM.
  * Fix cofs chdir with wildcards on existing upper/lower directory.
  * Don't drop last char from config, if last line no ends with CRLF.

  Console and daemons:
  * New menu entries in FLTK console
    Power off: Fast power down coLinux kernel. Without file sync!
    Reboot:    Sends ctrl-alt-del, init process goes into runlevel 6
    Shutdown:  Calls "/sbin/shutdown -h now" with fallback to "/sbin/halt"
               Shutdown will automatic call from stopping as service,
               or if user clicks close on the colinux-daemon.
  * New: "colinux-daemon -p pidFile" stores ID of coLinux in file pidFile.
    "colinux-console-fltk|nt -p pidFile" attach the monitor from stored
    ID.  With this mechanism can open a /named/ console without knowing