@@ -60,6 +60,7 @@ struct co_osdep_manager {
 	unsigned long mdls_allocated;
 	unsigned long pages_allocated;
 	unsigned long pages_mapped;
+	unsigned long long hostmem_max_physical_address;
 };
 
 #define fixme_IoSetCancelRoutine(Irp, func) \
